; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-array.c_insert_ablock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-array.c_insert_ablock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_array_info = type { i32 }
%struct.dm_block = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_array_info*, i32, %struct.dm_block*, i32*)* @insert_ablock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @insert_ablock(%struct.dm_array_info* %0, i32 %1, %struct.dm_block* %2, i32* %3) #0 {
  %5 = alloca %struct.dm_array_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.dm_block*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.dm_array_info* %0, %struct.dm_array_info** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.dm_block* %2, %struct.dm_block** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load %struct.dm_block*, %struct.dm_block** %7, align 8
  %11 = call i32 @dm_block_location(%struct.dm_block* %10)
  %12 = call i32 @cpu_to_le64(i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = call i32 @__dm_bless_for_disk(i32 %13)
  %15 = load %struct.dm_array_info*, %struct.dm_array_info** %5, align 8
  %16 = getelementptr inbounds %struct.dm_array_info, %struct.dm_array_info* %15, i32 0, i32 0
  %17 = load i32*, i32** %8, align 8
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @dm_btree_insert(i32* %16, i32 %18, i32* %6, i32* %9, i32* %19)
  ret i32 %20
}

declare dso_local i32 @cpu_to_le64(i32) #1

declare dso_local i32 @dm_block_location(%struct.dm_block*) #1

declare dso_local i32 @__dm_bless_for_disk(i32) #1

declare dso_local i32 @dm_btree_insert(i32*, i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
